spacing issue for form
added 0 margin for left and right on form to eliminate side scrolling on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ footer {height:3em;}
   display: block;
   width: 100%;
   padding: 0;
-  margin: 2em;
+  margin: 2em 0;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
